--- a/slides/u1-3-review/u2-review-starter-TEST.Rmd
+++ b/slides/u1-3-review/u2-review-starter-TEST.Rmd
@@ -32,10 +32,9 @@ Each row is a sand grain mineral observed at a particular location (one of ten).
 
 ### Exercise 2
 
-Remove this text, and add your answer for Exercise 2 here.
-Add code chunks as needed.
-Don't forget to label your code chunk.
-Do not use spaces in code chunk labels.
+```{r inspect-other-dataframes}
+
+```
 
 ### Exercise 3
 
